[update] add facebook login

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -71,7 +71,7 @@
             android:textColor="@android:color/white"
             android:textStyle="bold" />
 
-        <Button
+        <com.facebook.login.widget.LoginButton
             android:id="@+id/facebook_login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
